# jira-time-in-status

./: .gitignore  PSD.csv  README.md  jira_phase_matrix.py  pyproject.toml  requirements-dev.txt
src/jirapythontool/: cli.py  jira_phase_matrix.py
