[project]
name = "jirapythontool"
version = "0.0.1"
description = "Simple Python tool to interact with Jira Cloud"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Peter Panchine", email = "panchine.peter@gmail.com"}]
license = {text = "MIT"}

dependencies = [
  "httpx>=0.24.0",
  "click>=8.0"
]

[project.urls]
Homepage = ""

[project.scripts]
jirapyt = "jirapythontool.cli:main"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
